--- a/browser/scss/directives/navbar.scss
+++ b/browser/scss/directives/navbar.scss
@@ -13,13 +13,13 @@ navbar {
 
   fullstack-logo {
     margin-top: 5px;
-    margin-right: 20px;
-    width: 40px;
+    margin-right: 90px;
+    width: 50px;
   }
 
   a {
     color: black;
-    font-size: 16px;
+    font-size: 20px;
   }
 
   .nav > li > a {
@@ -57,6 +57,22 @@ navbar {
       color: #f30046;
       cursor: pointer;
     }
+  }
+
+  .glyphicon {
+    font-size: 20px;
+  }
+
+  li {
+    padding-right: 15px;
+  }
+
+  .welcome span {
+    font-size: 20px;
+  }
+
+  .welcome a {
+    font-weight: bold;
   }
 
 }
