--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -4,37 +4,95 @@
     width: 150px;
     margin: 0 auto;
   }
+
+  .col-xs-12 {
+    display: table;
+    margin: 0 auto;
+    width: 90%;
+  }
+
+
   h1 {
     margin-top: 40px;
     text-align: center;
   }
 
   #upperHome {
-  	margin-bottom: 1%;
+  	margin-bottom: 0px;
+    img {
+      display: block;
+      margin: auto;
+      height: 40%;
+      width: 100%;
+      border-top-right-radius: 4px;
+      border-top-left-radius: 4px;
+    }
   }
 
-  #headerImage {
-    display: block;
-    margin: auto;
-    width: 90%;
-    height: 50%;
+  .form-group {
+    background-color: black;
+    font-size: 20px;
+    border: 1px solid black;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    padding: 10px;
+    text-align: center;
+    color: #ddd;
+    select {
+      border-radius: 0px;
+    }
+
   }
 
-  .thumbnail {
-  	padding: 20px;
-  	border-style: 1px solid black;
+  select {
+    font-size: 18px;
+    padding: 0px;
+  }
+
+
+  .filterPanel {
+    padding-bottom: 20px
+  }
+
+  .filterLabel {
+    margin: 5px;
+
+  }
+
+  .filterBox {
+    display: inline-block;
+    width: 70%;
+    margin: 5px;
+  }
+
+  .lowerHome {
+    text-align: center
+  }
+
+  .product {
+    display: inline-block;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    text-align: center;
   }
 
 	.prodIcon {
 	    position: relative;
 	    float: left;
-	    width:  120px;
-	    height: 120px;
+	    width:  150px;
+	    height: 150px;
 	    background-position: 50% 50%;
 	    background-repeat:   no-repeat;
 	    background-size:     cover;
+      margin: 10px;
 
 	}
+
+
+  .productsBtn {
+    margin: 2px;
+  }
 
 	.productLink {
 		font-size: 20px;
