--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -1,24 +1,19 @@
 #home {
+  background-color: #780912;
   fullstack-logo {
     padding-top: 30px;
     width: 150px;
     margin: 0 auto;
   }
 
-  .col-xs-12 {
-    display: table;
-    margin: 0 auto;
-    width: 90%;
-  }
-
-
   h1 {
     margin-top: 40px;
     text-align: center;
   }
 
-  #upperHome {
+  .upperHome {
   	margin-bottom: 0px;
+    margin-top: 0px;
     img {
       display: block;
       margin: auto;
@@ -33,16 +28,27 @@
   .filterPanel .form-group {
     background-color: black;
     font-size: 20px;
-    border: 1px solid black;
     padding: 10px;
     text-align: center;
-    color: #ddd;
     margin-bottom: 0px;
-    select {
-      border-radius: 0px;
-    }
-
+    border-radius: 0px;
+    text-align: right;
+    color: white;
   }
+/*
+  .form-group .filterPanelXsSm {
+    background-color: black;
+    font-size: 20px;
+    padding: 10px;
+    text-align: center;
+    margin-bottom: 0px;
+    border-radius: 0px;
+    text-align: right;
+    color: white;
+   
+  }
+*/
+
 
   select {
     font-size: 18px;
@@ -53,13 +59,19 @@
 
   .filterLabel {
     margin: 5px;
-
+    color: white;
   }
 
   .filterBox {
     display: inline-block;
-    width: 70%;
-    margin: 5px;
+    width: 10%;
+    margin-right: 10px;
+  }
+
+  .filterBoxLast {
+    display: inline-block;
+    width: 10%;
+    margin-right: 20px;
   }
 
   .lowerHome {
@@ -71,18 +83,24 @@
     border: 1px solid #ddd;
     padding: 5px;
     text-align: center;
+    align-items: center;
+    background-color: white;
   }
 
-	.prodIcon {
-	    position: relative;
-	    float: left;
-	    width:  150px;
-	    height: 150px;
-	    background-position: 50% 50%;
-	    background-repeat:   no-repeat;
-	    background-size:     cover;
-      margin: 10px;
+  .btn {
+    border-radius: 2px;
+  }
 
+  .prodImage {
+    display: block;
+    margin: auto;
+    img {
+      display: block;
+      margin: auto;
+      border: 2px solid #ddd;
+	    width:  200px;
+	    height: 200px;
+    }
 	}
 
 
