--- a/browser/scss/product/main.scss
+++ b/browser/scss/product/main.scss
@@ -25,6 +25,11 @@
 		padding-top: 10px;
 	}
 
+	.review {
+		padding-bottom: 5px;
+		border-bottom: 1px solid #ddd;
+		margin-bottom: 5px;
+	}
 
   .productInfo label {
     font-size: 20px;
