--- a/browser/scss/product/main.scss
+++ b/browser/scss/product/main.scss
@@ -1,8 +1,55 @@
 #product {
-  .productLabel {
+	.upperProduct {
+		background-color: white;
+    text-align: left;
+    padding-bottom: 5px;
+    border-bottom: 5px solid #ddd;
+	}
+	.lowerProduct {
+		background-color: white;
+	}
+
+	.productImage {
+		margin-top: 10px;
+	}
+	.productInfo {
+		margin-top: 10px;
+	}
+
+	.productImage img {
+		height: 200px;
+		width: 200px;
+	}
+
+	.userRating {
+		color: #780912;
+		font-weight: bold;
+	}
+
+	.lowerProduct {
+		padding-top: 10px;
+	}
+
+	.review {
+		padding-bottom: 5px;
+		border-bottom: 1px solid #ddd;
+		margin-bottom: 5px;
+	}
+
+	.prodDescript1 {
+		padding-top: 5px;
+		margin-bottom: 1px;
+	}
+
+	.prodDescript2 {
+		margin-top: 2px;
+	}
+
+  .productInfo label {
     font-size: 20px;
   }
   .productPrice {
-    font-size: 14px;
+    font-size: 20px;
   }
+  
 }
