--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -49,6 +49,9 @@
   }
 */
 
+  .productRating {
+    font-weight: bold;
+  }
 
   select {
     font-size: 18px;
@@ -64,13 +67,13 @@
 
   .filterBox {
     display: inline-block;
-    width: 10%;
+    width: 150px;
     margin-right: 10px;
   }
 
   .filterBoxLast {
     display: inline-block;
-    width: 10%;
+    width: 150px;
     margin-right: 20px;
   }
 
@@ -80,14 +83,17 @@
 
   .product {
     display: inline-block;
-    border: 1px solid #ddd;
-    padding: 5px;
-    padding-bottom: 10px;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
     text-align: center;
     align-items: center;
     background-color: white;
   }
 
+  .productLabel {
+    color: #780912;
+    font-weight: bold;
+  }
 
   .btn {
     border-radius: 2px;
@@ -104,10 +110,16 @@
       display: block;
       margin: auto;
       border: 2px solid #ddd;
+      border-radius: 5px;
 	    width:  180px;
 	    height: 180px;
     }
+    img:hover {
+      border: 2px solid #780912;
+      cursor: pointer;
+    }
 	}
+
 
 
   .productsBtn {
