css for history and review

--- a/browser/scss/cart/main.scss
+++ b/browser/scss/cart/main.scss
@@ -8,9 +8,8 @@
 		button {
 			margin-bottom: 30px;
 		}
-
+		height: 1000px;
 	}
-
 
 	.cartItemPanel .form-control {
 		width: 100px;
@@ -22,6 +21,7 @@
 	.cartLabel {
 		font-weight: bold;
 	}
+
 	img {
 		height: 180px;
 		width: 180px;
