completed review page

--- a/browser/scss/review/main.scss
+++ b/browser/scss/review/main.scss
@@ -4,8 +4,20 @@
 		height: 1000px;
 		font-size: 16px;
 		font-weight: bold;
-		.form-control {
+		.dropdownScore {
 			width: 100px;
 		}
-	}		
+	}
+	.reviewTitle {
+		display: block;
+		width: 400px;
+	}	
+	select {
+		display: block;
+		width: 100px;
+	}
+
+	.feedback {
+		width: 600px;
+	}
 }
