--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -28,6 +28,6 @@ body {
 @import 'cart/main';
 @import 'order/main';
 @import 'review/main';
-
-
+@import 'account/main';
+@import 'createProduct/main'
 
