--- a/browser/scss/order/main.scss
+++ b/browser/scss/order/main.scss
@@ -28,6 +28,7 @@
   .orderProduct {
   	padding-bottom: 10px;
   	padding-top: 20px;
+    border-bottom: 1px solid #ddd;
 
   }
 
@@ -35,6 +36,11 @@
   	padding-top: 5px;
   	padding-bottom: 10px;
   	font-size: 16px;
+  }
+
+  .orderBtm {
+    height: 800px;
+    background-color: white;
   }
 
 }
