--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -29,9 +29,7 @@ body {
 @import 'order/main';
 @import 'review/main';
 @import 'account/main';
-@import 'createProduct/main'
+@import 'createProduct/main';
 @import 'user/main';
 
-
->>>>>>> master
 
