--- a/browser/scss/signup/main.scss
+++ b/browser/scss/signup/main.scss
@@ -1,13 +1,26 @@
 #signUpForm {
-	width:80%;
+	width:60%;
 	margin: 0 auto;
 }
 
-input[type=text], input[type=password]{
-	width:60%;
+#signUpForm input[type=text], #signUpForm input[type=password]{
+	width:130%;
 	padding: 8px;
 	margin: 0 auto;
 	box-sizing: border-box;
-	border: 2px solid black;
-    border-radius: 2px;
+	border: 1px solid black;
+    border-radius: 8px;
+}
+
+#signup .bufferOauth {
+	color: black;
+	width: 20%;
+}
+
+#signup .orText {
+	margin-left:auto;
+	margin-right: auto;
+	font-weight: bold;
+	font-size: 20px;
+	align: center;
 }
