--- a/browser/scss/login/main.scss
+++ b/browser/scss/login/main.scss
@@ -1,23 +1,25 @@
 #login {
+  
+  .loginMain {
+    background-color: white;
+  }
 
-	h1,h3{
-		color: orange;
+	.loginForm {
+    text-align: center;
+    margin: 0 auto;
 	}
-	#login-form {
-		width: 60%;
-  	margin: 0 auto;
+	.loginBtm {
+		height: 1000px;
+    background-color: white;
 	}
-  	.loginBtm {
-  		height: 300px;
-  	}
   	.loginTop {
   		height: 200px;
   	}
 
   	.form {
   		border: 1px solid #ddd;
-  		margin-left: auto;
-    	margin-right: auto;
+  		margin: 0 auto;
+      float: none;
     	height: 300px;
     	width:400px;
   	}
@@ -28,15 +30,6 @@
 
   	input[type='password']{
   		width:250px;
-  	}
-
-  	.background {
-  		background: url(http://www.pixelstalk.net/wp-content/uploads/2016/06/Jungle-HD-Wallpapers.jpg) no-repeat center center fixed;
-  		-webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-        height: 1200px;
   	}
 
 }
