--- a/browser/scss/login/main.scss
+++ b/browser/scss/login/main.scss
@@ -26,10 +26,12 @@
 
   	input[type='text']{
   		width:250px;
+      margin-left:70px;
   	}
 
   	input[type='password']{
   		width:250px;
+      margin-left:70px;
   	}
 
 }
