--- a/browser/scss/cart/main.scss
+++ b/browser/scss/cart/main.scss
@@ -23,8 +23,9 @@
 	}
 
 	img {
-		height: 180px;
-		width: 180px;
+		height: 200px;
+		width: 200px;
+		border: 1px solid #ddd;
 	}
 
 	.addressForm {
@@ -37,7 +38,7 @@
 
 	.cartItem {
 		padding-top: 10px;
-		padding-bottom: 5px;
+		padding-bottom: 10px;
 		border-bottom: 1px solid #ddd;
 	}
 
