--- a/browser/scss/signup/main.scss
+++ b/browser/scss/signup/main.scss
@@ -1,26 +1,38 @@
-#signUpForm {
-	width:60%;
-	margin: 0 auto;
-}
+#signup{
+	
 
-#signUpForm input[type=text], #signUpForm input[type=password]{
-	width:130%;
-	padding: 8px;
-	margin: 0 auto;
-	box-sizing: border-box;
-	border: 1px solid black;
-    border-radius: 8px;
-}
+	#signUpForm {
+		width:60%;
+		margin: 0 auto;
+	}
 
-#signup .bufferOauth {
-	color: black;
-	width: 20%;
-}
+	.signupMain {
+		background-color: white;
+		height:1000px;
+		text-align: center;
+	}
 
-#signup .orText {
-	margin-left:auto;
-	margin-right: auto;
-	font-weight: bold;
-	font-size: 20px;
-	align: center;
+	#signUpForm input[type=text], #signUpForm input[type=password]{
+		width:100%;
+		padding: 8px;
+		margin: 0 auto;
+		margin-bottom: 10px;	
+		box-sizing: border-box;
+		border: 1px solid black;
+	    border-radius: 8px;
+	}
+
+	#signup .bufferOauth {
+		color: black;
+		width: 20%;
+	}
+
+	#signup .orText {
+		margin-left:auto;
+		margin-right: auto;
+		font-weight: bold;
+		font-size: 20px;
+		align: center;
+	}
+
 }
